syntax = "proto3";

package v1.ampbv1;

import "v1/ampb/msg_title.proto";

option go_package = "github.com/dj-yacine-flutter/gojo/pb/v1/ampb;ampbv1";

message CreateAnimeMovieTitlesRequest {
  int64                  animeID     = 1;
  AnimeMovieTitleRequest animeTitles = 2;
}

message CreateAnimeMovieTitlesResponse {
  AnimeMovieTitleResponse animeTitles = 1;
}